# actix-rpc

./: .gitignore  Cargo.toml
src/: client.rs  server.rs
