[package]
name = "actix-examples"
version = "0.1.0"
authors = ["Raul <raul.tang.lc@gmail.com>"]
edition = "2018"

[dependencies]
actix-codec = "0.2"
actix-connect = "2.0.0-alpha.3"
actix-ioframe = { path = "../../rust/actix-net/actix-ioframe" }
actix-rt = "1.1"
actix-server = "1.0"
actix-service = "1.0"
actix-threadpool = "0.3"

futures-channel = { version = "0.3.4", default-features = false }
futures-util = { version = "0.3.4", default-features = false, features = ["sink"] }

socket2 = "0.3"
bytes = "0.5"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"